--- a/Falabella6/Venetian300x600.html
+++ b/Falabella6/Venetian300x600.html
@@ -2137,19 +2137,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 20px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
 #i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 283px; height: 80px;
-        -ms-transform: translate(0, 0) translate(8px, 307px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(8px, 307px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(8px, 307px) rotate(0deg);
-        transform: translate(0, 0) translate(8px, 307px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(8px, 315px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(8px, 315px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(8px, 315px) rotate(0deg);
+        transform: translate(0, 0) translate(8px, 315px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
-#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 15px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
 #i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 269px; height: 73px;
-        -ms-transform: translate(0, 0) translate(16px, 349px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(16px, 349px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(16px, 349px) rotate(0deg);
-        transform: translate(0, 0) translate(16px, 349px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(16px, 344px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(16px, 344px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(16px, 344px) rotate(0deg);
+        transform: translate(0, 0) translate(16px, 344px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2238,10 +2238,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 }
 /*#/#*//*#i42.i43.positioning.css:positioning/base/css.2*/
 #i42 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 300px; height: 250px;
-        -ms-transform: translate(0, 0) translate(0px, 444px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 444px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 444px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 444px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(0px, 446px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 446px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 446px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 446px) rotate(0deg);
+}
+/*#/#*//*#i73.image.css:image/base/css*/
+#i73 { opacity: 1; }
+/*#/#*//*#i73.i74.positioning.css:positioning/base/css.2*/
+#i73 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 135px; height: 34px;
+        -ms-transform: translate(0, 0) translate(9px, 263px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(9px, 263px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(9px, 263px) rotate(0deg);
+        transform: translate(0, 0) translate(9px, 263px) rotate(0deg);
 }
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
@@ -2266,7 +2275,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i50.image.css:image/base/css*/
 #i50 { opacity: 1; }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
-#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 25px;
+#i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 26px; height: 26px;
         -ms-transform: translate(0, 0) translate(35px, 412px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(35px, 412px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(35px, 412px) rotate(0deg);
@@ -2276,10 +2285,10 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i52 { opacity: 1; }
 /*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
 #i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(65px, 411px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(65px, 411px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(65px, 411px) rotate(0deg);
-        transform: translate(0, 0) translate(65px, 411px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(64px, 412px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(64px, 412px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(64px, 412px) rotate(0deg);
+        transform: translate(0, 0) translate(64px, 412px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2288,21 +2297,25 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Europa tiene mucho por ofrecerte</div>
+<div id="i7">¿Pensando en Europa?</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para recorrer el viejo continente con el acompañamiento de un experto.</div>
+<div id="i12">Déjate sorprender por los nuevos circuitos a Europa ¿Qué esperas para iniciar una nueva aventura?</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/m3YTw9A.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/xJSu6KM.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/hejrDDK.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/AUZZFMv.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/BQktMEG.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/e8CHrnN.jpg"></dataimg>
+<!--#/#--><!--#i2.i72.slice-image.html:slice-image/html.1-->
+<dataimg id="i72" src="https://i.imgur.com/tteJKYJ.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.image.html:image/html-->
 <img id="i42" src="https://i.imgur.com/0caj6mK.png"/>
+<!--#/#--><!--#i73.image.html:image/html-->
+<img id="i73" src="https://i.imgur.com/vf5nk8i.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i68.image.html:image/html-->
@@ -2365,10 +2378,16 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
+/*#/#*//*#i2.i72.slice-image.js:slice-image/base/js.1*/
+
 /*#/#*//*#i42.image.js:image/base/js*/
 
 /*#/#*//*#i42.i43.positioning.js:positioning/base/js.2*/
 bmShow('i42');
+/*#/#*//*#i73.image.js:image/base/js*/
+
+/*#/#*//*#i73.i74.positioning.js:positioning/base/js.2*/
+bmShow('i73');
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2383,7 +2402,7 @@ var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
     /*#i70.i71.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2400,7 +2419,7 @@ var el = document.getElementById('i48');
 
 el.addEventListener('click', function(e){
     /*#i62.i63.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2417,7 +2436,7 @@ var el = document.getElementById('i50');
 
 el.addEventListener('click', function(e){
     /*#i64.i65.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2434,7 +2453,7 @@ var el = document.getElementById('i52');
 
 el.addEventListener('click', function(e){
     /*#i66.i67.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2459,28 +2478,36 @@ name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: Europa tiene mucho por ofrecerte; customName: false;
+name: ¿Pensando en Europa?; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para recorrer el viejo continente con el acompañamiento de un experto.; customName: false;
+name: Déjate sorprender por los nuevos circuitos a Europa ¿Qué esperas para iniciar una nueva aventura?; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: m3YTw9A.jpg; fileId: ; sourceTypeId: externalUrl;
+name: xJSu6KM.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: hejrDDK.jpg; fileId: ; sourceTypeId: externalUrl;
+name: AUZZFMv.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: BQktMEG.jpg; fileId: ; sourceTypeId: externalUrl;
+name: e8CHrnN.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i72.slice-image.meta:slice-image/meta.1*/
+name: tteJKYJ.jpg; fileId: ; sourceTypeId: externalUrl;
+customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i42.image.meta:image/meta*/
 name: MAPA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i42.i43.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i73.image.meta:image/meta*/
+name: Boton; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i73.i74.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
