--- a/Falabella6/Venetian320x480.html
+++ b/Falabella6/Venetian320x480.html
@@ -2133,28 +2133,42 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
         transform: translate(0, 0) translate(0px, -1px) rotate(0deg);
 }
-/*#/#*//*#i42.image.css:image/base/css*/
-#i42 { opacity: 1; }
 /*#/#*//*#i72.shape.css:shape/base/css*/
 #i72 { background-color: #ffffff; opacity: 1;
+}
+/*#/#*//*#i72.i73.positioning.css:positioning/base/css.2*/
+#i72 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 6.874990463256836%;
+        -ms-transform: translate(0, 0) translate(0px, 386px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 386px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 386px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 386px) rotate(0deg);
+}
+/*#/#*//*#i42.image.css:image/base/css*/
+#i42 { opacity: 1; }
+/*#/#*//*#i42.i43.positioning.css:positioning/base/css.2*/
+#i42 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 267px;
+        -ms-transform: translate(0, 0) translate(0px, 418px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(0px, 418px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(0px, 418px) rotate(0deg);
+        transform: translate(0, 0) translate(0px, 418px) rotate(0deg);
 }
 /*#/#*//*#i7.text.css:text/base/css*/
 #i7 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i7.i8.positioning.css:positioning/base/css.2*/
-#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 30px;
-        -ms-transform: translate(0, 0) translate(0px, 317px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 317px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 317px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 317px) rotate(0deg);
+#i7 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 24px;
+        -ms-transform: translate(0, 0) translate(-4px, 323px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(-4px, 323px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(-4px, 323px) rotate(0deg);
+        transform: translate(0, 0) translate(-4px, 323px) rotate(0deg);
 }
 /*#/#*//*#i12.text.css:text/base/css*/
-#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 13px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i12 { position: absolute; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 14px; color: #000000; font-weight: normal; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i12.i13.positioning.css:positioning/base/css.2*/
-#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 252px; height: 63px;
-        -ms-transform: translate(0, 0) translate(34px, 337px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(34px, 337px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(34px, 337px) rotate(0deg);
-        transform: translate(0, 0) translate(34px, 337px) rotate(0deg);
+#i12 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 274px; height: 63px;
+        -ms-transform: translate(0, 0) translate(17px, 347px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(17px, 347px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(17px, 347px) rotate(0deg);
+        transform: translate(0, 0) translate(17px, 347px) rotate(0deg);
 }
 /*#/#*//*#i2.slice.css:slice/base/css*/
 #i2.adf-SlicedUnit {
@@ -2173,6 +2187,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
         transform: translate(0, 0) translate(0px, 0px) rotate(0deg);
+}
+/*#/#*//*#i75.image.css:image/base/css*/
+#i75 { opacity: 1; }
+/*#/#*//*#i75.i76.positioning.css:positioning/base/css.2*/
+#i75 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 146px; height: 36px;
+        -ms-transform: translate(0, 0) translate(8px, 274px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(8px, 274px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(8px, 274px) rotate(0deg);
+        transform: translate(0, 0) translate(8px, 274px) rotate(0deg);
 }
 /*#/#*//*#i16.i17.positioning.css:positioning/base/css.2*/
 #i16 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 49px; height: 34px;
@@ -2239,20 +2262,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 .visibility-hidden, .visibility-hidden * {
     visibility: hidden !important;
 }
-/*#/#*//*#i42.i43.positioning.css:positioning/base/css.2*/
-#i42 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 320px; height: 267px;
-        -ms-transform: translate(0, 0) translate(0px, 391px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 391px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 391px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 391px) rotate(0deg);
-}
-/*#/#*//*#i72.i73.positioning.css:positioning/base/css.2*/
-#i72 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 100%; height: 6.874990463256836%;
-        -ms-transform: translate(0, 0) translate(0px, 386px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(0px, 386px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(0px, 386px) rotate(0deg);
-        transform: translate(0, 0) translate(0px, 386px) rotate(0deg);
-}
 /*#/#*//*#i16.image.css:image/base/css*/
 #i16 { opacity: 1; }
 /*#/#*//*#i68.image.css:image/base/css*/
@@ -2277,19 +2286,19 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 #i50 { opacity: 1; }
 /*#/#*//*#i50.i51.positioning.css:positioning/base/css.2*/
 #i50 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 25px;
-        -ms-transform: translate(0, 0) translate(28px, 385px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(28px, 385px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(28px, 385px) rotate(0deg);
-        transform: translate(0, 0) translate(28px, 385px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(28px, 386px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(28px, 386px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(28px, 386px) rotate(0deg);
+        transform: translate(0, 0) translate(28px, 386px) rotate(0deg);
 }
 /*#/#*//*#i52.image.css:image/base/css*/
 #i52 { opacity: 1; }
 /*#/#*//*#i52.i53.positioning.css:positioning/base/css.2*/
 #i52 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 25px; height: 26px;
-        -ms-transform: translate(0, 0) translate(55px, 384px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(55px, 384px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(55px, 384px) rotate(0deg);
-        transform: translate(0, 0) translate(55px, 384px) rotate(0deg);
+        -ms-transform: translate(0, 0) translate(55px, 386px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(55px, 386px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(55px, 386px) rotate(0deg);
+        transform: translate(0, 0) translate(55px, 386px) rotate(0deg);
 }
 /*#/#*/
 </style>
@@ -2297,24 +2306,28 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <body>
 <!--#html:common/html--><!--#i1.core.html:core/html--><!--#/#--><!--#i30.shape.html:shape/html-->
 <div id="i30"></div>
-<!--#/#--><!--#i42.image.html:image/html-->
-<img id="i42" src="https://i.imgur.com/0caj6mK.png"/>
 <!--#/#--><!--#i72.shape.html:shape/html-->
 <div id="i72"></div>
+<!--#/#--><!--#i42.image.html:image/html-->
+<img id="i42" src="https://i.imgur.com/0caj6mK.png"/>
 <!--#/#--><!--#i7.text.html:text/html-->
-<div id="i7">Europa tiene mucho por ofrecerte</div>
+<div id="i7">¿Pensando en Europa?</div>
 <!--#/#--><!--#i12.text.html:text/html-->
-<div id="i12">Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para recorrer el viejo continente con el acompañamiento de un experto.</div>
+<div id="i12">Déjate sorprender por los nuevos circuitos a Europa ¿Qué esperas para iniciar una nueva aventura?</div>
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/8bbzVNN.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/AUZZFMv.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/BzrSHoy.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/xJSu6KM.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/hejrDDK.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/tteJKYJ.jpg"></dataimg>
+<!--#/#--><!--#i2.i74.slice-image.html:slice-image/html.1-->
+<dataimg id="i74" src="https://i.imgur.com/e8CHrnN.jpg"></dataimg>
 <!--#/#-->
 </div>
+<!--#/#--><!--#i75.image.html:image/html-->
+<img id="i75" src="https://i.imgur.com/vf5nk8i.png"/>
 <!--#/#--><!--#i16.image.html:image/html-->
 <img id="i16" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i68.image.html:image/html-->
@@ -2329,12 +2342,12 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <script>
 /*#i30.i31.positioning.js:positioning/base/js.2*/
 bmShow('i30');
+/*#/#*//*#i72.i73.positioning.js:positioning/base/js.2*/
+bmShow('i72');
 /*#/#*//*#i42.image.js:image/base/js*/
 
 /*#/#*//*#i42.i43.positioning.js:positioning/base/js.2*/
 bmShow('i42');
-/*#/#*//*#i72.i73.positioning.js:positioning/base/js.2*/
-bmShow('i72');
 /*#/#*//*#i7.i8.positioning.js:positioning/base/js.2*/
 bmShow('i7');
 /*#/#*//*#i12.i13.positioning.js:positioning/base/js.2*/
@@ -2383,6 +2396,12 @@ document.addEventListener('DOMContentLoaded', function() {
 
 /*#/#*//*#i2.i6.slice-image.js:slice-image/base/js*/
 
+/*#/#*//*#i2.i74.slice-image.js:slice-image/base/js.1*/
+
+/*#/#*//*#i75.image.js:image/base/js*/
+
+/*#/#*//*#i75.i76.positioning.js:positioning/base/js.2*/
+bmShow('i75');
 /*#/#*//*#i16.image.js:image/base/js*/
 
 /*#/#*//*#i16.i17.positioning.js:positioning/base/js.2*/
@@ -2397,7 +2416,7 @@ var el = document.getElementById('i68');
 
 el.addEventListener('click', function(e){
     /*#i70.i71.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG')) : window.open(dhtml.getVar('clickTAG', 'https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2414,7 +2433,7 @@ var el = document.getElementById('i48');
 
 el.addEventListener('click', function(e){
     /*#i62.i63.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG2')) : window.open(dhtml.getVar('clickTAG2', 'https://www.facebook.com/sharer/sharer.php?u=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2431,7 +2450,7 @@ var el = document.getElementById('i50');
 
 el.addEventListener('click', function(e){
     /*#i64.i65.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=¡Mira lo que he encontrado! https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG3')) : window.open(dhtml.getVar('clickTAG3', 'whatsapp://send?text=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2448,7 +2467,7 @@ var el = document.getElementById('i52');
 
 el.addEventListener('click', function(e){
     /*#i66.i67.actions-clicktag.js:actions-clicktag/base/js.2*/
-    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=recorre_el_mundo&utm_content=landing_home_europa_0207'), dhtml.getVar('landingPageTarget', '_blank'));
+    window.mraid ? mraid.open(Adform.getClickURL('clickTAG4')) : window.open(dhtml.getVar('clickTAG4', 'https://twitter.com/home?status=https://www.viajesfalabella.com.co/ofertas/tiquetes-hoteles-paquetes-cruceros/paquetes-online-2/europa/?utm_source=onnative&utm_medium=paid&utm_campaign=pasaporte&utm_content=landing_home_europa_1507'), dhtml.getVar('landingPageTarget', '_blank'));
 /*#/#*/
 });
 
@@ -2472,34 +2491,42 @@ function bmHide(id) {
 name: Shape 1;
 /*#/#*//*#i30.i31.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i72.shape.meta:shape/meta*/
+name: Shape 2;
+/*#/#*//*#i72.i73.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i42.image.meta:image/meta*/
 name: MAPA; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i42.i43.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
-/*#/#*//*#i72.shape.meta:shape/meta*/
-name: Shape 2;
-/*#/#*//*#i72.i73.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i7.text.meta:text/meta*/
-name: Europa tiene mucho por ofrecerte; customName: false;
+name: ¿Pensando en Europa?; customName: false;
 /*#/#*//*#i7.i8.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i12.text.meta:text/meta*/
-name: Disfruta de los nuevos circuitos premium que tiene Viajes Falabella Para recorrer el viejo continente con el acompañamiento de un experto.; customName: false;
+name: Déjate sorprender por los nuevos circuitos a Europa ¿Qué esperas para iniciar una nueva aventura?; customName: false;
 /*#/#*//*#i12.i13.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
 /*#/#*//*#i2.slice.meta:slice/meta*/
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: 8bbzVNN.jpg; fileId: ; sourceTypeId: externalUrl;
+name: AUZZFMv.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: BzrSHoy.jpg; fileId: ; sourceTypeId: externalUrl;
+name: xJSu6KM.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: hejrDDK.jpg; fileId: ; sourceTypeId: externalUrl;
+name: tteJKYJ.jpg; fileId: ; sourceTypeId: externalUrl;
+/*#/#*//*#i2.i74.slice-image.meta:slice-image/meta.1*/
+name: e8CHrnN.jpg; fileId: ; sourceTypeId: externalUrl;
+customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
+/*#/#*//*#i75.image.meta:image/meta*/
+name: BOTON; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
+customName: 1;
+/*#/#*//*#i75.i76.positioning.meta:positioning/meta.2*/
+data: /*!*/{"keepAspectRatio":true}/*!*/;
 /*#/#*//*#i16.image.meta:image/meta*/
 name: LOGO; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
