--- a/Falabella6/Venetian300x600.html
+++ b/Falabella6/Venetian300x600.html
@@ -2303,13 +2303,13 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 <!--#/#--><!--#i2.slice.html:slice/html-->
 <div id="i2" class="adf-SliceBox">
     <!--#i2.i4.slice-image.html:slice-image/html-->
-<dataimg id="i4" src="https://i.imgur.com/xJSu6KM.jpg"></dataimg>
+<dataimg id="i4" src="https://i.imgur.com/WbkhSqc.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
 <dataimg id="i5" src="https://i.imgur.com/AUZZFMv.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/e8CHrnN.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/qhOE80m.jpg"></dataimg>
 <!--#/#--><!--#i2.i72.slice-image.html:slice-image/html.1-->
-<dataimg id="i72" src="https://i.imgur.com/tteJKYJ.jpg"></dataimg>
+<dataimg id="i72" src="https://i.imgur.com/3CMOldo.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i42.image.html:image/html-->
@@ -2489,13 +2489,13 @@ data: /*!*/{}/*!*/;
 name: Slice 1;
 customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
-name: xJSu6KM.jpg; fileId: ; sourceTypeId: externalUrl;
+name: WbkhSqc.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
 name: AUZZFMv.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: e8CHrnN.jpg; fileId: ; sourceTypeId: externalUrl;
+name: qhOE80m.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i72.slice-image.meta:slice-image/meta.1*/
-name: tteJKYJ.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 3CMOldo.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
