--- a/Falabella6/Venetian320x480.html
+++ b/Falabella6/Venetian320x480.html
@@ -2319,11 +2319,11 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
     <!--#i2.i4.slice-image.html:slice-image/html-->
 <dataimg id="i4" src="https://i.imgur.com/AUZZFMv.jpg"></dataimg>
 <!--#/#--><!--#i2.i5.slice-image.html:slice-image/html-->
-<dataimg id="i5" src="https://i.imgur.com/xJSu6KM.jpg"></dataimg>
+<dataimg id="i5" src="https://i.imgur.com/WbkhSqc.jpg"></dataimg>
 <!--#/#--><!--#i2.i6.slice-image.html:slice-image/html-->
-<dataimg id="i6" src="https://i.imgur.com/tteJKYJ.jpg"></dataimg>
+<dataimg id="i6" src="https://i.imgur.com/3CMOldo.jpg"></dataimg>
 <!--#/#--><!--#i2.i74.slice-image.html:slice-image/html.1-->
-<dataimg id="i74" src="https://i.imgur.com/e8CHrnN.jpg"></dataimg>
+<dataimg id="i74" src="https://i.imgur.com/qhOE80m.jpg"></dataimg>
 <!--#/#-->
 </div>
 <!--#/#--><!--#i75.image.html:image/html-->
@@ -2514,11 +2514,11 @@ customName: ;
 /*#/#*//*#i2.i4.slice-image.meta:slice-image/meta*/
 name: AUZZFMv.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i5.slice-image.meta:slice-image/meta*/
-name: xJSu6KM.jpg; fileId: ; sourceTypeId: externalUrl;
+name: WbkhSqc.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i6.slice-image.meta:slice-image/meta*/
-name: tteJKYJ.jpg; fileId: ; sourceTypeId: externalUrl;
+name: 3CMOldo.jpg; fileId: ; sourceTypeId: externalUrl;
 /*#/#*//*#i2.i74.slice-image.meta:slice-image/meta.1*/
-name: e8CHrnN.jpg; fileId: ; sourceTypeId: externalUrl;
+name: qhOE80m.jpg; fileId: ; sourceTypeId: externalUrl;
 customName: false;
 /*#/#*//*#i2.i3.positioning.meta:positioning/meta.1*/
 data: /*!*/{}/*!*/;
