--- a/Midas form/formulario-def.html
+++ b/Midas form/formulario-def.html
@@ -615,7 +615,7 @@
                 <!--<iframe src="Formulario.html" width="306" height="605" frameborder="0" scrolling="no" position="absolute" style="margin-left: 0px; margin-top: -8px;"></iframe>-->
                 <form id="question" class="FR form">
                     <center>
-                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/y2iJltw.png" style="height:400px; width: 300px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -30px;
+                    <span style="bottom:1px; text-align:center ; float:center; background-color: #fff;"> <img src="https://i.imgur.com/dXTT6FN.png" style="height:400px; width: 300px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -30px;
     box-shadow:0 0 0px 0px #fff; margin-bottom: -35px;"></span>
 
    <!-- <span style="bottom:5px; text-align:center ; float:center; background-color: #ffa809;"> <img src="https://i.imgur.com/zRuYlRY.jpg" style="height:100px; width: 250px; text-decoration: none; border-radius:0px; margin-top:0px; margin-left: -3px; margin-bottom: -5px;"></span>
@@ -661,7 +661,7 @@
             <div class="FR red">
                 <center>
                 <span class="s-I" style="width: 300px; margin-left: -30px;"> 
-                    <img src="https://i.imgur.com/Gd7d64x.png" style="height:400px; width: 310px;  text-decoration: none; border-radius:0px;
+                    <img src="https://i.imgur.com/hPH2daz.png" style="height:450px; width: 310px;  text-decoration: none; border-radius:0px;
     box-shadow:0 0 0px 0px #fff; margin-top: 50px;"></span>
 
                <!--  <span class="s-II bzm_text_title  bzm_text_medium" style="margin-top: 30px;">
