--- a/Falabella6/Cube.html
+++ b/Falabella6/Cube.html
@@ -657,9 +657,9 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         transform: translate(0, 0) translate(253px, 220px) rotate(0deg);
 }
 /*#/#*//*#i4.i414.text.css:text/base/css*/
-#i414 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+#i414 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
 /*#/#*//*#i414.i415.positioning.css:positioning/base/css.2*/
-#i414 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 291px; height: 17px;
+#i414 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 291px; height: 24px;
         -ms-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
@@ -732,15 +732,6 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -moz-transform: translate(0, 0) translate(22px, 176px) rotate(0deg);
         transform: translate(0, 0) translate(22px, 176px) rotate(0deg);
 }
-/*#/#*//*#i5.i472.text.css:text/base/css*/
-#i472 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 17px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
-/*#/#*//*#i472.i473.positioning.css:positioning/base/css.2*/
-#i472 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 291px; height: 17px;
-        -ms-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
-        -webkit-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
-        -moz-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
-        transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
-}
 /*#/#*//*#i5.i428.image.css:image/base/css*/
 #i428 { opacity: 1; }
 /*#/#*//*#i428.i429.positioning.css:positioning/base/css.2*/
@@ -749,6 +740,15 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
         -webkit-transform: translate(0, 0) translate(254px, 220px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(254px, 220px) rotate(0deg);
         transform: translate(0, 0) translate(254px, 220px) rotate(0deg);
+}
+/*#/#*//*#i5.i476.text.css:text/base/css*/
+#i476 { position: absolute; white-space: pre-wrap; -webkit-font-smoothing: antialiased; -moz-osx-font-smoothing: grayscale; opacity: 1; background-color: rgba(255,255,255,0); font-family: "Trebuchet MS", Helvetica, sans-serif; font-size: 18px; color: #000000; font-weight: bold; font-style: normal; text-decoration: none; text-align: center; line-height: 100%; letter-spacing: 0px; text-shadow: 0px 0px 0px rgba(214,214,214,1); }
+/*#/#*//*#i476.i477.positioning.css:positioning/base/css.2*/
+#i476 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 291px; height: 24px;
+        -ms-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
+        -webkit-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
+        -moz-transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
+        transform: translate(0, 0) translate(4px, 152px) rotate(0deg);
 }
 /*#/#*//*#i5.i58.image.css:image/base/css*/
 #i58 { opacity: 1; }
@@ -820,7 +820,7 @@ document.write('<script src="'+ (window.API_URL || 'https://s1.adform.net/banner
 /*#/#*//*#i6.i466.image.css:image/base/css*/
 #i466 { opacity: 1; }
 /*#/#*//*#i466.i467.positioning.css:positioning/base/css.2*/
-#i466 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 170px; height: 48px;
+#i466 { position: absolute; top: 0%; left: 0%; overflow: hidden; width: 170px; height: 43px;
         -ms-transform: translate(0, 0) translate(65px, 101px) rotate(0deg);
         -webkit-transform: translate(0, 0) translate(65px, 101px) rotate(0deg);
         -moz-transform: translate(0, 0) translate(65px, 101px) rotate(0deg);
@@ -928,10 +928,10 @@ url('fonts/') format('svg');
 <div id="i30"></div>
 <!--#/#--><!--#i5.i474.text.html:text/html-->
 <div id="i474">Déjate sorprender por los nuevos circuitos a Europa ¿Qué esperas para iniciar una nueva aventura?</div>
-<!--#/#--><!--#i5.i472.text.html:text/html-->
-<div id="i472">¿Pensando en Europa?</div>
 <!--#/#--><!--#i5.i428.image.html:image/html-->
 <img id="i428" src="https://i.imgur.com/M6QtrYS.png"/>
+<!--#/#--><!--#i5.i476.text.html:text/html-->
+<div id="i476">¿Pensando en Europa?</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
 <img id="i58" src="https://i.imgur.com/aq6jlHP.png"/>
 <!--#/#--><!--#i5.i434.shape.html:shape/html-->
@@ -951,7 +951,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i6.i60.image.html:image/html-->
 <img id="i60" src="https://i.imgur.com/0caj6mK.png"/>
 <!--#/#--><!--#i6.i466.image.html:image/html-->
-<img id="i466" src="https://i.imgur.com/8ueWCdQ.png"/>
+<img id="i466" src="https://i.imgur.com/ceOlO1r.png"/>
 <!--#/#--><!--#i6.i406.image.html:image/html-->
 <img id="i406" src="https://i.imgur.com/Dcokx8V.png"/>
 <!--#/#--><!--#i6.i99.shape.html:shape/html-->
@@ -1081,8 +1081,8 @@ if ('click' === 'click') {
 
 /*#/#*//*#i50.i51.actions-clicktag.js:actions-clicktag/base/js.1*/
 
-/*#/#*//*#i472.i473.positioning.js:positioning/base/js.2*/
-bmShow('i472');
+/*#/#*//*#i474.i475.positioning.js:positioning/base/js.2*/
+bmShow('i474');
 /*#/#*//*#i5.i428.image.js:image/base/js*/
 
 /*#/#*//*#i428.i429.positioning.js:positioning/base/js.2*/
@@ -1153,8 +1153,8 @@ el.addEventListener('click', function(e){
 if ('click' === 'click') {
     el.style.cursor = 'pointer';
 }
-/*#/#*//*#i474.i475.positioning.js:positioning/base/js.2*/
-bmShow('i474');
+/*#/#*//*#i476.i477.positioning.js:positioning/base/js.2*/
+bmShow('i476');
 /*#/#*//*#i5.i52.actions.js:actions/base/js*/
 /* Name: On Click; */
 
@@ -1317,15 +1317,15 @@ data: /*!*/{}/*!*/;
 name: Déjate sorprender por los nuevos circuitos a Europa ¿Qué esperas para iniciar una nueva aventura?; customName: false;
 /*#/#*//*#i474.i475.positioning.meta:positioning/meta.2*/
 data: /*!*/{}/*!*/;
-/*#/#*//*#i5.i472.text.meta:text/meta*/
-name: ¿Pensando en Europa?; customName: false;
-/*#/#*//*#i472.i473.positioning.meta:positioning/meta.2*/
-data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i428.image.meta:image/meta*/
 name: LOGO copy; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
 /*#/#*//*#i428.i429.positioning.meta:positioning/meta.2*/
 data: /*!*/{"keepAspectRatio":true}/*!*/;
+/*#/#*//*#i5.i476.text.meta:text/meta*/
+name: ¿Pensando en Europa?; customName: false;
+/*#/#*//*#i476.i477.positioning.meta:positioning/meta.2*/
+data: /*!*/{}/*!*/;
 /*#/#*//*#i5.i58.image.meta:image/meta*/
 name: Imagen de Cuadro; fileId: ; sourceTypeId: externalUrl; autoDimensions: 1;
 customName: 1;
