--- a/Falabella6/Cube.html
+++ b/Falabella6/Cube.html
@@ -905,7 +905,7 @@ url('fonts/') format('svg');
     <!--#i4.i20.shape.html:shape/html-->
 <div id="i20"></div>
 <!--#/#--><!--#i4.i130.image.html:image/html-->
-<img id="i130" src="https://i.imgur.com/sUwiRiJ.png"/>
+<img id="i130" src="https://i.imgur.com/2fKOzmd.png"/>
 <!--#/#--><!--#i4.i181.image.html:image/html-->
 <img id="i181" src="https://i.imgur.com/M6QtrYS.png"/>
 <!--#/#--><!--#i4.i414.text.html:text/html-->
