--- a/Falabella6/Cube.html
+++ b/Falabella6/Cube.html
@@ -933,7 +933,7 @@ url('fonts/') format('svg');
 <!--#/#--><!--#i5.i476.text.html:text/html-->
 <div id="i476">¿Pensando en Europa?</div>
 <!--#/#--><!--#i5.i58.image.html:image/html-->
-<img id="i58" src="https://i.imgur.com/aq6jlHP.png"/>
+<img id="i58" src="https://i.imgur.com/qymIJOW.png"/>
 <!--#/#--><!--#i5.i434.shape.html:shape/html-->
 <div id="i434"></div>
 <!--#/#--><!--#i5.i424.image.html:image/html-->
